--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
     <head>
         <title>Ukážka HTML+CSS CL</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     </head>
     <body>
         <header>
@@ -94,6 +95,6 @@
               </div>
 
         </footer>    
-
+        <script src="./jquery.js" type="text/javascript"></script>
     </body>
 </html>
